# research_work_by_a_student

./: .env.example  .gitignore  CITATION.cff  README.md  pyproject.toml  requirements-gpu.txt  requirements.txt  task.md
agent/: CLAUDE.md  COLAB_QUICKSTART.md  __init__.py  __main__.py  colab_mcp_server.py  experiment_runner.py  logger.py  mcp_client.py
assets/: diagrams.mmd  errors.mmd  pipeline.mmd
configs/: grpo_config.yaml  model_registry.yaml  ppo_config.yaml  tech_stack.yaml
notebooks/: colab_diploma_experiments.ipynb  soc_narrative_demo.ipynb
scripts/: macos_nightly_runner.sh  model_bakeoff.py  nightly_ueba_pipeline.sh  prepare_cert_dataset.py  run_evaluation.py  run_full_pipeline.py  run_ueba_baseline.py  setup_uv_env.sh
src/data/: __init__.py  cert_loader.py  data_utils.py  dataset_loader.py  preprocessor.py  scenario_builder.py
src/evaluation/: __init__.py  error_analysis.py  evaluator.py  ueba_metrics.py
src/models/: __init__.py  baseline_eval.py  model_loader.py
src/rewards/: __init__.py  reward_accuracy.py  reward_binary.py  reward_entropy.py  reward_lambda_grpo.py  reward_reasoning.py  reward_ueba.py
src/training/: __init__.py  dapo_trainer.py  grpo_trainer.py  ppo_trainer.py
src/visualization/: __init__.py  plots.py
