[project]
name = "research-work-by-a-student"
version = "0.1.0"
description = "RL fine-tuning experiments for behavior analysis diploma"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.5.0",
  "transformers>=4.46.0",
  "trl>=0.12.0",
  "datasets>=3.4.1,<4.4.0",
  "accelerate>=1.0.0",
  "peft>=0.13.0",
  "sentencepiece>=0.2.0",
  "scikit-learn>=1.5.0",
  "evaluate>=0.4.0",
  "numpy>=1.26.0",
  "pandas>=2.0.0",
  "wandb>=0.18.0",
  "matplotlib>=3.8.0",
  "plotly>=5.18.0",
  "kaleido>=0.2.1",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0",
  "tqdm>=4.66.0",
  "rich>=13.0.0",
  "typer>=0.12.0",
]

[dependency-groups]
local = [
  "ipykernel>=6.29.0",
]
colab = [
  "flask>=3.0.0",
  "pyngrok>=7.0.0",
  "psutil>=5.9.0",
  "requests>=2.32.0",
]
cuda = [
  "unsloth>=2024.12.0",
  "bitsandbytes>=0.44.0",
]
dev = [
  "jupyterlab>=4.2.0",
  "pytest>=8.2.0",
]

[tool.uv]
package = false
